# crllm

./: .gitignore  .pylintrc  LICENSE  README.md  crllm_config.toml  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  pytest.yml
src/crllm/: app.py  cli.py  init_project.py  prompt_builder.py
src/crllm/code/: code_loader.py
src/crllm/code/loaders/: __init__.py  file.py  git.py  git_compare.py  ignore_utils.py
src/crllm/code/loaders/exceptions/: no_code_found.py
src/crllm/config/: __init__.py  config.toml  config_service.py
src/crllm/model/: model.py  model_factory.py
src/crllm/model/provider/: __init__.py  azure.py  dryrun.py  huggingface.py  ollama.py  openai.py
src/crllm/test/functional/: config.toml  init_project_test.py  smoke_test.py
src/crllm/test/functional/code/loaders/file/: file_test.py
src/crllm/test/unit/code/loaders/: ignore_utils_test.py
src/crllm/test/unit/config/: config_service_test.py
